Fixed overlapping css class

--- a/frontend/src/app/features/posts/components/gallery/gallery.component.scss
+++ b/frontend/src/app/features/posts/components/gallery/gallery.component.scss
@@ -12,7 +12,7 @@ $container-gap: 1em;
 
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
-    .header {
+    :first-child {
         grid-column: 1 / -1;
 
         display: flex;
